# cmake-demos

./: .gitignore  CMakeLists.txt  README.md  TutorialConfig.h.in  tutorial.cxx
example/: CMakeLists.txt  build.sh
example/MathFunctions/: CMakeLists.txt  MakeTable.cxx  mysqrt.cxx
tutorial/step1/: README.md  cmake.sh
tutorial/step1/src/: CMakeLists.txt  tutorial.cxx
